Add item show fix

--- a/TodoMVC.Client/app/index.html
+++ b/TodoMVC.Client/app/index.html
@@ -3,21 +3,9 @@
 <head>
     <title>TodoMVC Application</title>
 
-    <!-- Angular -->
-    <script src="./lib/angular.js" type="text/javascript"></script>
-    <script src="./lib/angular-route.js" type="text/javascript"></script>
-    <script src="./lib/angular-resource.js" type="text/javascript"></script>
-    <script src="./js/app.js" type="text/javascript"></script>
-    <script src="./js/services.js" type="text/javascript"></script>
-    <script src="./js/controllers.js" type="text/javascript"></script>
-    <script src="./js/filters.js" type="text/javascript"></script>
-    <script src="./js/directives.js" type="text/javascript"></script>
-
     <!-- bootstrap -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/bootstrap-theme.min.css">
-    <script src="./assets/js/bootstrap.min.js"></script>
-
 </head>
 <body>
     <!-- header -->
@@ -43,5 +31,22 @@
 
     <!-- View -->
     <div ng-view class="container"></div>
+
+    <!-- Scripts -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://code.jquery.com/jquery.js"></script>
+
+    <!-- Angular -->
+    <script src="./assets/js/lib/angular.js" type="text/javascript"></script>
+    <script src="./assets/js/lib/angular-route.js" type="text/javascript"></script>
+    <script src="./assets/js/lib/angular-resource.js" type="text/javascript"></script>
+    <script src="./js/app.js" type="text/javascript"></script>
+    <script src="./js/services.js" type="text/javascript"></script>
+    <script src="./js/controllers.js" type="text/javascript"></script>
+    <script src="./js/filters.js" type="text/javascript"></script>
+    <script src="./js/directives.js" type="text/javascript"></script>
+
+    <!-- Bootstrap -->
+    <script src="./assets/js/lib/bootstrap.min.js"></script>
 </body>
 </html>
