Add angular animations

--- a/TodoMVC.Client/app/index.html
+++ b/TodoMVC.Client/app/index.html
@@ -4,8 +4,11 @@
     <title>TodoMVC Application</title>
 
     <!-- bootstrap -->
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="./css/lib/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/lib/bootstrap-theme.min.css">
+
+    <!-- Our own -->
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <!-- header -->
@@ -34,12 +37,13 @@
 
     <!-- Scripts -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="./assets/js/lib/jquery-1.10.2.min.js"></script>
+    <script src="./js/lib/jquery-1.10.2.min.js"></script>
 
     <!-- Angular -->
-    <script src="./assets/js/lib/angular.js" type="text/javascript"></script>
-    <script src="./assets/js/lib/angular-route.js" type="text/javascript"></script>
-    <script src="./assets/js/lib/angular-resource.js" type="text/javascript"></script>
+    <script src="./js/lib/angular.js" type="text/javascript"></script>
+    <script src="./js/lib/angular-route.js" type="text/javascript"></script>
+    <script src="./js/lib/angular-resource.js" type="text/javascript"></script>
+    <script src="./js/lib/angular-animate.js" type="text/javascript"></script>
     <script src="./js/app.js" type="text/javascript"></script>
     <script src="./js/services.js" type="text/javascript"></script>
     <script src="./js/controllers.js" type="text/javascript"></script>
@@ -47,6 +51,6 @@
     <script src="./js/directives.js" type="text/javascript"></script>
 
     <!-- Bootstrap -->
-    <script src="./assets/js/lib/bootstrap.min.js"></script>
+    <script src="./js/lib/bootstrap.min.js"></script>
 </body>
 </html>
