--- a/TodoMVC.Client/app/index.html
+++ b/TodoMVC.Client/app/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!-- header -->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" ng-controller="HeaderCtrl">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -25,8 +25,8 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#create">Create</a></li>
+                    <li ng-class="{ active: isActive('/') }"><a href="#">Home</a></li>
+                    <li ng-class="{ active: isActive('/list/create') }"><a href="#/list/create">Create List</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
