Added fancy date time picker

--- a/TodoMVC.Client/app/index.html
+++ b/TodoMVC.Client/app/index.html
@@ -6,6 +6,7 @@
     <!-- bootstrap -->
     <link rel="stylesheet" href="./css/lib/bootstrap.min.css">
     <link rel="stylesheet" href="./css/lib/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="./css/lib/bootstrap-datetimepicker.min.css">
 
     <!-- Our own -->
     <link rel="stylesheet" href="./css/main.css">
@@ -52,5 +53,6 @@
 
     <!-- Bootstrap -->
     <script src="./js/lib/bootstrap.min.js"></script>
+    <script src="./js/lib/bootstrap-datetimepicker.min.js"></script>
 </body>
 </html>
